ADLIBRE DMS VERSIONS CHANGELOG

DMS 1.0.6
---------------------------------
+ Capitalization of MUI first letters in title name of docrule or mdt.
= refactoring api methods to meet new core requirements.

DMS 1.0.5
---------------------------------
+ added search results pagination
+ added caching usage
+ added sessions administration and one click cleanup admin action
+ added usage of django-log-file-viewer (version 0.3 for now)
+ minor bugfixes in logging
= refactoring of search methods
= changed default search behaviour to match documents with end_date in a date range

DMS 1.0.4
---------------------------------
+ added document metadata editing feature in MUI

DMS 1.0.3
---------------------------------
+ added DMS versioning and minor core refactoring